20040602 snapshot.c: save/restore ZXCF upload state.
20040602 snapshot.c,zxatasp.[ch]: save/restore ZXATASP state.
20040602 menu_data.c: use proper C comment rather than #if 0/#endif.
20040602 widget/{menu.c,widget.[ch]}: make Options/Peripherals work.
20040603 snapshot.c: refactor snapshot_copy_to into multiple functions.
20040603 snapshot.c: refactor snapshot_copy_from into multiple functions.
20040604 snapshot.c: restore all RAM pages present in snap; Scorpion and
	 SE snaps now more likely to work properly.
20040604 widget/Makefile.am: ensure config.h can be found when building
	 menu_data.c
20040604 ui/uijoystick.c: #include "joystick.h"
20040606 Makefile.am,ay.[ch],if2.[ch],memory.[ch],scld.[ch],slt.[ch],
	 snapshot.c,spectrum.[ch],trdos.[ch],zxatasp.[ch],zxcf.[ch],
	 z80/{Makefile.am,z80.[ch]}: move routines to (de)serialise
	 each bit of the snapshot structure into their own source files.
	 Improves encapsulation somewhat.
20040609 slt.[ch],spectrum.[ch],z80/{coretest.c,z80.pl,z80_ops.c}:
	 improve encapsulation of SLT data.
20040609 Makefile.am,machine.c,memory.c,snapshot.c,spectrum.[ch],
	 machines/{pentagon.c,scorpion.c,spec128.c,spec16.c,spec48.c,
	 spec_se.c,specplus2a.c,specplus3.c,tc2048.c,tc2068.c},
	 ui/gtk/debugger.c,ula.[ch],z80/{coretest.c,z80.pl,z80_macros.h,
	 z80_ops.c}: place ULA routines in their own source file.
20040610 settings.dat: make ZXATASP upload and write protect, and ZXCF
	 upload default to off.
20040610 settings-header.pl,settings.pl,ui/gtk/roms.c,widget/roms.c:
	 no need to put machine name in ROM titles any more as they're
	 now on their own menus.
20040610 ay.c: add 'return 0' to the end of ay_to_snapshot.
20040610 ui/gtk/roms.c: improve user interface a bit.
20040610 ui/gtk/gtkjoystick.c: improve user interface a bit.
20040611 settings.dat,ui/gtk/gtkjoystick.c: allow up to 10 buttons per
	 joystick, and improve user interface for changing these.
20040611 ui/gtk/{gtkjoystick.c,roms.c}: remove a couple of warnings.