@@ -922,3 +922,4 @@
 20040611 settings.dat,ui/gtk/gtkjoystick.c: allow up to 10 buttons per
 	 joystick, and improve user interface for changing these.
 20040611 ui/gtk/{gtkjoystick.c,roms.c}: remove a couple of warnings.
+20040615 snapshot.c: fall back to +2A if +3e not available.
